step 2 - add styling and images for portfolio section, update image file extensions

--- a/styles.css
+++ b/styles.css
@@ -76,3 +76,32 @@ a {
   text-decoration: none;
   display: block;
 }
+
+.portfolio-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+#portfolio {
+  padding: 2rem 6rem 2rem 6rem;
+  background-color: rgba(226, 218, 222, 0.5);
+}
+
+.portfolio-item {
+  width: 40%;
+  text-align: center;
+  border: 1px #888888 solid;
+  border-radius: 25px;
+  box-shadow: 5px 10px;
+  box-shadow: 5px 8px #888888;
+  background-color: white;
+}
+
+.portfolio-item h2 {
+  padding-top: 10px;
+}
+
+.image-container img {
+  max-width: 100%;
+  max-height: 100%;
+}
