--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,12 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url("images/heroImage.jpg");
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.2),
+      rgba(0, 0, 0, 0.2)
+    ),
+    url("images/heroImage.jpg");
   background-size: cover;
 }
 
